--- a/assets/login.html
+++ b/assets/login.html
@@ -15,5 +15,13 @@
 			
 		</div>
 	</div>
+	<section class="content">
+		<article class="flux-content">
+			<header>
+				<h1>What's gazr ?</h1>
+			</header>
+			<p>Jedi master Darth Vader the Force is strong with this one protocol droid Coruscant Lando Calrissian. Dantooine the Force Jabba the Hutt these aren't the droids you're looking for I find your lack of faith disturbing. Tatooine battle of Yavin Millenium Falcon scoundrel tie fighter. Apprentice empire who you calling scruffy-looking aren't you a little short for a stormtrooper. Star destroyer Luke Skywalker garbage compactor. Ewok X-Wing Master Yoda sith lord it's a trap Corellian ship.</p>
+		</article>
+	</section>
 </body>
 </html>
