--- a/assets/index.html
+++ b/assets/index.html
@@ -9,13 +9,18 @@
 <body>
 	<div class="topbar">
 		<a href="" class="logo">
-			<img src="img/gazr.png" alt="">
+			<img src="img/gleenr.png" alt="">
 		</a>
 		<div class="login-box">			
 			<form action="login.html" class="login-form">
 				<input type="email" class="input-text" placeholder="email">
 				<input type="password" class="input-text" placeholder="password">
+				
+				<input type="checkbox" id="remember" class="" value="1" name="remember">
+				<label for="remember" class="gleenr-check-empty"></label>
+				<label for="remember">Remember me</label>
 				<input type="submit" value="Log in">
+				
 			</form>		
 		</div>
 	</div>
@@ -29,9 +34,9 @@
 			</form>	
 			<div class="article-separator"><span>Or</span></div>
 			<ul class="register-socials">
-				<li><a href="" class="login-facebook"></a></li>
-				<li><a href="" class="login-twitter"></a></li>
-				<li><a href="" class="login-google"></a></li>
+				<li><span href="" class="gleenr-facebook"></span><a href="">Join</a></li>
+                <li><span href="" class="gleenr-twitter"></span><a href="">Join</a></li>
+                <li><span href="" class="gleenr-google-plus"></span><a href="">Join</a></li>
 			</ul>
 		</article>
 		<article class="article-content">
